--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>LocoLab - Where Influence Meets Local Impact</title>
+    <meta name="description" content="The marketplace where influence meets local impact. Connect brands with authentic local content creators across India." />
   </head>
   <body>
     <div id="root"></div>
